welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	while(!finalPos){
		avance();
	}
}



def finalPos():Boolean {
	while(estFaceMur){
		setDirection(Direction.EST);
		if (estFaceMur){
			return true
		}else{
			return false
		}
		
	}
}
